# databricks-ncaa-tournament-predictor

./: .env.template  .gitignore  LICENSE  README.md  databricks.yml  initialize.sh  local-environment.code-workspace  pyproject.toml  remote-databricks-cluster.code-workspace
datasets/kenpom_head_to_head/: 2018_results.txt  2019_results.txt  2020_results.txt  2021_results.txt  2022_results.txt  2023_results.txt  2024_results.txt  2025_results.txt
notebooks/: exploration.ipynb  kaggle_stats_pipeline.ipynb  ncaa_game_prediction.ipynb  ncaa_stats_data_pipeline.ipynb
src/ncaa_tournament_predictor/config/: __init__.py
src/ncaa_tournament_predictor/databricks/: __init__.py
src/ncaa_tournament_predictor/jobs/head_to_head/: __init__.py
src/ncaa_tournament_predictor/jobs/kaggle_stats/: __init__.py
src/ncaa_tournament_predictor/jobs/training_data/: __init__.py
src/ncaa_tournament_predictor/pipelines/kaggle_stats/: __init__.py
src/ncaa_tournament_predictor/queries/: __init__.py  stats_differences.py
src/ncaa_tournament_predictor/tables/: __init__.py
src/ncaa_tournament_predictor/tensorflow_models/: __init__.py  game_prediction.py  text_embedding.py
src/ncaa_tournament_predictor/tensorflow_models/game_prediction/: __init__.py  columns.py  model.py  preprocessing.py  text_layers.py
src/ncaa_tournament_predictor/transformation/: __init__.py  comparable_features.py  head_to_head_data.py  kaggle_stats.py  training_data.py
src/ncaa_tournament_predictor/volumes/: __init__.py
test/ncaa_tournament_predictor/: spark.py
test/ncaa_tournament_predictor/test_data/: __init__.py  head_to_head_data.txt
test/ncaa_tournament_predictor/transformation/: head_to_head_data_test.py
