[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncaa_tournament_predictor"
description = "A project to try out NCAA tournament predictions using Databricks"
requires-python = "~= 3.12.0"
dynamic = ["version"]
dependencies = [
    "hatchling~=1.27.0",
    "databricks-connect~=16.3.0",
    "python-dotenv~=1.0.1",
    "jupyter~=1.1.1",
    "pandas~=2.2.3", # Installed for DataWrangler VS Code support
    "pyarrow~=19.0.1", # Installed directly for DataWrangler VS Code support
    "ipykernel~=6.29.5",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.5"
]

[tool.hatch.version]
path = "src/ncaa_tournament_predictor/__about__.py"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]