[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ncaa_tournament_predictor"
description = "A project to try out NCAA tournament predictions using Databricks"
requires-python = "~=3.12.0"
version = "0.0.1"
dependencies = [
    "build~=1.2.2.post1",
    "python-dotenv~=1.0.1",
    "jupyter~=1.1.1",
    "pandas~=2.2.3",
    "pyarrow~=19.0.1", # Installed directly for DataWrangler VS Code support
    "ipykernel~=6.29.5",
    "pip~=25.0.1", # Annoying, but needed as Databricks extension relies on pip (no pdm support)
    "tensorflow~=2.16.2" # Latest MacOS compatible tensorflow
]

[project.optional-dependencies]
local-environment = [
    "pyspark~=3.5.5",
    "pytest~=8.3.5",
]
remote-databricks-cluster = [
    "databricks-connect==16.1.0",
    "databricks-feature-engineering==0.9.0",
]
machine-learning = [
    "databricks-feature-engineering==0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib"]